# web-socket-io

./: 404.html  Broadcasting.html  Cancellation.html  Cargo.toml  Notify_events.html  Protocol.html  README.md  Request-Response.html  Tutorial.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy-book.yml
docs/: book.toml
docs/src/: Broadcasting.md  Cancellation.md  Introduction.md  Notify_events.md  Protocol.md  Request-Response.md  SUMMARY.md  Tutorial.md  emitting_events.md  introduction.md  project_initialization.md
example/: Cargo.toml  README.md  index.html
example/src/: main.rs  room.rs  socket.rs
examples/basic/: Cargo.toml  index.html
examples/basic/src/: main.rs
libs/axum-socket-io/: Cargo.toml
libs/axum-socket-io/examples/: basic.rs  basic.ts
libs/axum-socket-io/src/: lib.rs
libs/client/: deno.json  main.ts  package-lock.json  package.json  play.ts  tsconfig.json
libs/client-socket-io/: .npmignore  LICENSE  deno.json  package.json  tsconfig.json
libs/client-socket-io/src/: index.ts
libs/client/src/: index.ts
libs/web-socket-io/: Cargo.toml
libs/web-socket-io/src/: error.rs  lib.rs
src/: error.rs  frame.rs  lib.rs
