[package]
name = "axum-socket-io"
version = "0.1.0"
edition = "2021"
description = "A protocol for event-driven, bi-directional communication between clients and servers"

license = "MIT"
keywords = ["ws", "websocket"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/web-socket-io"
homepage = "https://nurmohammed840.github.io/web-socket-io/"

[dependencies]
tokio = { version = "1", features = ["rt", "io-util"] }
axum = "0.7"
web-socket-io = "0.1"
sha-1 = "0.10"
base64 = "0.22"
hyper = "1"
hyper-util = "0.1"