[package]
name = "web-socket-io"
version = "0.1.0"
edition = "2021"

license = "MIT"
keywords = ["ws", "websocket"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/web-socket-io"
homepage = "https://nurmohammed840.github.io/web-socket-io/"

[dependencies]
web-socket = "0.7"
tokio = { version = "1", features = ["sync", "rt"] }

